(Probably) Fix responsiveness error on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -77,10 +77,7 @@ span:hover, .goto-link:hover {
     margin-bottom: 30px;
     padding: 25px;
     border-radius: 10px;
-    width: 200px;
-    height: 200px;
     max-width: 200px;
-    max-height: 200px;
 }
 
 .card-content {
@@ -129,3 +126,9 @@ span:hover, .goto-link:hover {
 .goto-link:last-child {
     margin-bottom: 0;
 }
+
+/* @media screen and (max-width: 768px) {
+    .project-card {
+        max-width: 100%;
+    }
+} */
